# NativeSocket

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/yph/nativesocket/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Echo.cpp  com_apress_echo_EchoClientActivity.h  com_apress_echo_EchoClientActivity_ClientTask.h  com_apress_echo_EchoServerActivity.h  com_apress_echo_EchoServerActivity_ServerTask.h  com_apress_echo_LocalEchoActivity.h  com_apress_echo_LocalEchoActivity_ClientTask.h  com_apress_echo_LocalEchoActivity_ServerTask.h
app/src/main/java/com/apress/echo/: AbstractEchoActivity.java  EchoClientActivity.java  EchoServerActivity.java  LocalEchoActivity.java  NetUtil.java
app/src/main/res/layout/: activity_echo_server.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yph/nativesocket/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
